kubernetes/workload/05-ingress/app-ingress-nip.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eventfindr-ingress-nip
  namespace: app
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # Limit musi byt aspon taky velky ako Spring multipart max-request-size.
    nginx.ingress.kubernetes.io/proxy-body-size: "85m"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "256k"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.20.223.129.102.nip.io
        - keycloak.20.223.129.102.nip.io
      secretName: eventfindr-tls-nip
  rules:
    - host: app.20.223.129.102.nip.io
      http:
        paths:
          # Backend API routy musia byt pred frontend fallbackom.
          - path: /events
            pathType: Prefix
            backend:
              service:
                name: eventfindr-be
                port:
                  number: 8080
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: eventfindr-be
                port:
                  number: 8080
          - path: /artists
            pathType: Prefix
            backend:
              service:
                name: eventfindr-be
                port:
                  number: 8080
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: eventfindr-be
                port:
                  number: 8080
          - path: /notifications
            pathType: Prefix
            backend:
              service:
                name: eventfindr-be
                port:
                  number: 8080
          - path: /comments
            pathType: Prefix
            backend:
              service:
                name: eventfindr-be
                port:
                  number: 8080
          - path: /follows
            pathType: Prefix
            backend:
              service:
                name: eventfindr-be
                port:
                  number: 8080
          - path: /actuator
            pathType: Prefix
            backend:
              service:
                name: eventfindr-be
                port:
                  number: 8080
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: fsa-keycloak-http
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eventfindr-fe
                port:
                  number: 80

    - host: keycloak.20.223.129.102.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fsa-keycloak-http
                port:
                  number: 80
